--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto:wght@300&display=swap');
  body {
-  background-color: rgb(226, 217, 217);
+  background-color:white;
   font-family: Arial;
   font-weight: lighter;
   font-size: 17px;
